# newsread

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.githooks/: pre-commit
backend/: .coveragerc  .dockerignore  Dockerfile  alembic.ini  openapi.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_summary_skipped_reason.py  0003_feed_owner_user_id.py  0004_browser_history_foundation.py  0005_browser_history_search.py  0006_browser_history_sync_rate_limit.py  0007_browser_history_host_scope.py
backend/app/: access.py  catalog_embeddings.py  config.py  crypto.py  db.py  deps.py  embeddings.py  error_handlers.py  extractor.py  fetcher.py  history_auth.py  history_embeddings.py  history_policy.py  history_search.py  history_sync.py  image_gen.py  llm.py  main.py  models.py  ner.py  push.py  qa_agent.py  queue.py  ranking.py  schemas.py  screenshot.py  security.py  seeds.py  summarizer.py  suppressions.py  timewindow.py  worker.py
backend/app/data/: catalog_seed.json
backend/app/enrichers/: __init__.py  arxiv.py  base.py  github.py  huggingface.py  npm.py  pipeline.py  pypi_pkg.py  urls.py  youtube.py
backend/app/messaging/: __init__.py  base.py  slack.py  teams.py
backend/app/routers/: activity.py  ai.py  ai_settings.py  articles.py  auth.py  catalog.py  client_errors.py  config.py  devices.py  entities.py  feeds.py  history.py  imports.py  integrations.py  interests.py  projects.py  shares.py  usage.py  users.py
backend/scripts/: audit_catalog.py  embed_catalog.py  export_openapi.py  seed_browser_history.py
backend/tests/: conftest.py  test_catalog_embeddings.py  test_config.py  test_crypto.py  test_db_repairs.py  test_edge_cases.py  test_embeddings.py  test_enrichers.py  test_extractor.py  test_fetcher.py  test_history_embeddings.py  test_history_policy.py  test_history_sync.py  test_image_gen.py  test_llm.py  test_main_db.py  test_matchers.py  test_messaging_slack.py  test_messaging_teams.py  test_ner.py  test_pipeline.py  test_push.py  test_qa_agent.py  test_queue.py  test_routers_activity.py  test_routers_ai.py  test_routers_ai_settings.py  test_routers_articles.py  test_routers_auth.py  test_routers_catalog.py  test_routers_client_errors.py  test_routers_config.py  test_routers_devices.py  test_routers_entities.py  test_routers_feeds.py  test_routers_history.py  test_routers_history_sync.py  test_routers_imports.py  test_routers_integrations.py  test_routers_interests.py  (+9 more)
docs/: PRD.md  browser-history-plan.md  browser-history-privacy.md  fe-productionize-plan.md  import-url-plan.md  messaging-setup.md
extension/: .gitignore  NOTICE  README.md  manifest.json  package-lock.json  package.json  tsconfig.json
frontend/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
mobile/: README.md  app.json  package-lock.json  package.json  tsconfig.json
(+221 files in other folders)
