[project]
name = "newsread-backend"
version = "0.1.0"
description = "NewsRead FastAPI backend (API, feed workers, AI pipeline)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "feedparser>=6.0",
    "python-dateutil>=2.9",
    "bcrypt>=4.2",
    "PyJWT>=2.9",
    "arq>=0.26",
    "nh3>=0.2",
    "lxml>=6.0",
    "openai>=1.50",
    "pgvector>=0.3",
    "pydantic-ai-slim[openai,tavily]>=2.0,<3",
    "scrapling[fetchers]>=0.4",
    "trafilatura>=1.12",
    # Capped <46: cryptography 46+ bundles an OpenSSL that uses ARMv8 crypto
    # instructions Docker Desktop's Apple-Silicon VM doesn't expose, so any Fernet
    # call SIGILLs (crashes the backend on startup). 43-45 run fine.
    "cryptography>=43,<46",
    "alembic>=1.18.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "respx>=0.21",
    "ruff>=0.9",
]

[tool.uv]
# App, not an installable package: `uv sync` installs only the dependencies.
package = false

[tool.pytest.ini_options]
# `app` lives at the repo's backend root and is not an installed package;
# python -m pytest used to add cwd to sys.path implicitly, `uv run pytest`
# does not.
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["app"]
# thread,greenlet: without it, coverage under-reports async route bodies that
# run across SQLAlchemy greenlet boundaries (they'd falsely show as uncovered).
concurrency = ["thread", "greenlet"]
omit = [
    "app/__init__.py",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    '\.\.\.',
    "@abstractmethod",
]
show_missing = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "B", # bugbear
    "UP", # pyupgrade
]
# Long lines are dominated by embedded SQL/prompt strings the formatter
# deliberately leaves alone; the formatter handles code lines.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests set env vars / monkeypatch modules before importing the app.
"tests/*" = ["E402"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom: calls in parameter defaults are the API.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.File",
    "fastapi.Security",
]
